# EventHandler

./: .gitignore  Makefile  README.MD  config.json  events_file.json  main.py  pyproject.toml
consumer/: __init__.py  consumer.py
propagator/: __init__.py  propagator.py
tests/: test_consumer.py  test_main.py  test_propagator.py
