[tool.poetry]
name = "eventhandler"
version = "0.1.0"
description = "Project with Event Propagator and Event Consumer services"
authors = ["Vaida Maslinskiene"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
aiohttp = "^3.11.5"
aiosqlite = "^0.20.0"
httpx = "^0.27.2"
aiofiles = "^24.1.0"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-mock = "^3.14.0"
flake8 = "^7.1.1"
isort = "^5.13.2"

[tool.isort]
profile = "black"
skip = [".git", ".venv"]

[tool.black]
line-length = 80
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
